--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
-rootProject.name = 'Kreise-Tests'
+rootProject.name = 'Penguin-Numbers-Tests'
 // includeBuild('/path/to/repository-solution')
 // includeBuild('/path/to/repository-exercise')
